--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -49,6 +49,10 @@ Register
                     {% endif %}
                 </div>
                 <div class="form-group">
+                    {{ form.role.label }}
+                    {{ form.role(class="form-control") }}
+                </div>
+                <div class="form-group">
                     {{ form.submit(class="btn btn-primary btn-block") }}
                 </div>
             </form>
