--- a/templates/base.html
+++ b/templates/base.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" href="/images/favicon.ico"/>
-    <!-- CSS -->
     <link rel="stylesheet" href="/css/main.css"/>
-    <!-- JAVASCRIPT -->
     <script src="/js/main.js" defer></script>
-    <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="icon" href="{{ url_for('static', filename='images/group.png') }}" type="image/png">
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
@@ -22,20 +19,47 @@
 {% endfor %}
 {% endif %}
 {% endwith %}
-<div>
-            Microblog:
-            <a href="{{ url_for('routes.home') }}">Home</a>
-            {% if current_user.is_anonymous %}
-            <a href="{{ url_for('routes.login') }}">Login</a>
-            {% else %}
-            <a href="{{ url_for('routes.user_profile', name=current_user.name) }}">Profile</a>
-            <a href="{{ url_for('routes.logout') }}">Logout</a>
-            {% endif %}
-        </div>
+
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+        <a class="nav-link active" href="{{ url_for('routes.home') }}">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('routes.info') }}">Information</a>
+    </li>
+    {% if current_user.is_anonymous %}
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('routes.login') }}">Login</a>
+        </li>
+    {% else %}
+        {% if current_user.role != 'volunteering organization' %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('routes.rewards') }}">My Rewards</a>
+            </li>
+        {% endif %}
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('routes.user_profile', name=current_user.name) }}">Profile</a>
+        </li>
+        {% if current_user.role == 'volunteering organization' %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('routes.add_hours') }}">Add Hours</a>
+            </li>
+        {% endif %}
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('routes.logout') }}">Logout</a>
+        </li>
+    {% endif %}
+</ul>
+
+
 <main class="p-2">
     {% block content %}
     {% endblock content %}
 </main>
+
+<footer>
+    <p>&copy; 2024 Volunteer Reward System</p>
+</footer>
 
 <!-- Include Bootstrap JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -43,3 +67,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
