--- a/templates/user.html
+++ b/templates/user.html
@@ -7,6 +7,11 @@ Profile
 {% block content %}
     <p>Name: {{ user.name }}</p>
     <p>Email: {{ user.email }}</p>
+    {% if current_user.role == 'volunteer' %}
+        <p><strong>Volunteer Hours:</strong> {{ user.hours_volunteered }} hours</p>
+    {% endif %}
+    <p><strong>Role:</strong> {{ user.role }}</p>
+    <a href="{{ url_for('routes.edit_profile') }}" class="btn btn-primary">Edit Profile</a>
+
     <!-- Change password? -->
-    <!-- Display total hours? -->
 {% endblock content %}
