--- a/templates/base.html
+++ b/templates/base.html
@@ -22,38 +22,38 @@
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link active" href="{{ url_for('routes.home') }}">Home</a>
+        <a class="nav-link {% if active_tab == 'home' %}active{% endif %}" href="{{ url_for('routes.home') }}">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('routes.info') }}">Information</a>
+        <a class="nav-link {% if active_tab == 'info' %}active{% endif %}" href="{{ url_for('routes.info') }}">Information</a>
     </li>
     {% if current_user.is_anonymous %}
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('routes.login') }}">Login</a>
+            <a class="nav-link {% if active_tab == 'login' %}active{% endif %}" href="{{ url_for('routes.login') }}">Login</a>
         </li>
     {% else %}
         {% if current_user.role == 'volunteer' %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('routes.rewards') }}">My Rewards</a>
+                <a class="nav-link {% if active_tab == 'rewards' %}active{% endif %}" href="{{ url_for('routes.rewards') }}">My Rewards</a>
             </li>
         {% endif %}
 
         <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('routes.user_profile', name=current_user.name) }}">Profile</a>
+            <a class="nav-link {% if active_tab == 'profile' %}active{% endif %}" href="{{ url_for('routes.user_profile', name=current_user.name) }}">Profile</a>
         </li>
 
         {% if current_user.role != 'volunteer' %} {# This means admins and volunteering orgs can add hours #}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('routes.add_hours') }}">Add Hours</a>
+                <a class="nav-link {% if active_tab == 'add-hours' %}active{% endif %}" href="{{ url_for('routes.add_hours') }}">Add Hours</a>
             </li>
         {% endif %}
 
         {% if current_user.role == 'admin' %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('routes.remove_user') }}">Admin - Remove User</a>
+                <a class="nav-link {% if active_tab == 'remove-user' %}active{% endif %}" href="{{ url_for('routes.remove_user') }}">Admin - Remove User</a>
             <li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('routes.view_database') }}">Admin - View Database</a>
+                <a class="nav-link {% if active_tab == 'database' %}active{% endif %}" href="{{ url_for('routes.view_database') }}">Admin - View Database</a>
             <li>
         {% endif %}
 
