--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="/css/main.css"/>
-    <script src="/js/main.js" defer></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/group.png') }}" type="image/png">
     <title>{% block title %}{% endblock title %}</title>
 </head>
@@ -59,6 +59,9 @@
         {% if current_user.role == 'volunteering organization' %}
             <li class="nav-item">
                 <a class="nav-link {% if active_tab == 'create-event' %}active{% endif %}" href="{{ url_for('routes.create_event') }}">Create Event</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if active_tab == 'manage-memberships' %}active{% endif %}" href="{{ url_for('routes.add_member') }}">Manage Memberships</a>
             </li>
         {% endif %}
 
