--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,119 @@
+
+#logo {
+  padding: 0.5rem;
+  text-align: left;
+  display:flex;
+}
+
+#logo h1 {
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 4rem;
+    color:#023020;
+}
+
+#learn-more {
+    margin:3rem;
+    margin-bottom:11rem;
+    padding: 10px 20px;
+    border-radius: 4px;
+    background-color:#023020;
+    color:white;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 10px 20px;
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    background: #f77062;
+    color: #fff;
+ }
+
+.content {
+  text-align: center;
+  font-family: "Source Sans 3", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.content h3 {
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.content h2 {
+  font-size: 3rem;
+  padding: 1rem;
+  font-weight: 500;
+}
+.content h1 {
+  font-size: 4rem;
+  padding: 1rem;
+  font-weight: 700;
+}
+
+.content p {
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
+.features {
+  left:50%;
+  align-self: center;
+}
+
+.table-page {
+  text-align: left;
+}
+
+.compact-list {
+    margin: 0;
+    padding: 0;
+    list-style-position: inside;
+}
+
+.compact-list li {
+    margin: 0;
+    padding: 2px 0;
+}
+
+#backgroundCarousel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.background-slide {
+    position: absolute;
+    width: 100vw;
+    height: 90vh;
+    opacity: 0.5;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.carousel-fade .carousel-item {
+    transition: opacity 1s ease-in-out;
+}
+
+main {
+    position: relative;
+    z-index: 1;
+}
+
 .autocomplete {
   position: relative;
   display: inline-block;
