--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,25 @@ Home
 {% endblock title %}
 
 {% block content %}
-<h1>Home Page</h1>
+<div style="height: 80vh;
+            width: 100vw;
+         opacity: 0.3;
+         padding: 0;
+         background-image: url('{{ url_for('static', filename='images/pexels-shvetsa-5029859.webp') }}');
+         background-size: cover;
+         background-position: center;
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+         position: absolute;
+         z-index:-1;">
+</div>
+<h1 style="padding:3rem;">The future of volunteering is here.</h1>
+<button id="learn-more">Learn More</button>
+<script>
+    document.getElementById('learn-more').addEventListener('click', function () {
+        window.location.href = "{{ url_for('routes.info') }}";
+    });
+</script>
 <p>Hello there, you are logged in as <span class="text-success font-weight-bold">{{ current_user.name }}</span>.</p>
 <a href="{{ url_for('routes.logout') }}">Logout</a>
 {% endblock content %}
