--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/group.png') }}" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
@@ -19,6 +25,11 @@
 {% endfor %}
 {% endif %}
 {% endwith %}
+
+<div id="logo">
+    <h1>VolunteerConnect</h1>
+    <img src="{{ url_for('static', filename='images/group.png') }}" alt="Group Image" style="height:5rem; width:auto">
+</div>
 
 <ul class="nav nav-tabs">
     <li class="nav-item">
@@ -42,21 +53,19 @@
             <li class="nav-item">
                 <a class="nav-link {% if active_tab == 'rewards' %}active{% endif %}" href="{{ url_for('routes.rewards') }}">My Rewards</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link {% if active_tab == 'manage-memberships' %}active{% endif %}" href="{{ url_for('routes.add_member') }}">Manage Memberships</a>
+            </li>
         {% endif %}
 
         <li class="nav-item">
             <a class="nav-link {% if active_tab == 'profile' %}active{% endif %}" href="{{ url_for('routes.user_profile', name=current_user.name) }}">Profile</a>
         </li>
 
-
-
-        {% if current_user.role != 'volunteer' %} {# This means admins and volunteering orgs can add hours #}
+        {% if current_user.role == 'volunteering organization' %}
             <li class="nav-item">
                 <a class="nav-link {% if active_tab == 'add-hours' %}active{% endif %}" href="{{ url_for('routes.add_hours') }}">Add Hours</a>
             </li>
-        {% endif %}
-
-        {% if current_user.role == 'volunteering organization' %}
             <li class="nav-item">
                 <a class="nav-link {% if active_tab == 'create-event' %}active{% endif %}" href="{{ url_for('routes.create_event') }}">Create Event</a>
             </li>
@@ -67,11 +76,14 @@
 
         {% if current_user.role == 'admin' %}
             <li class="nav-item">
+                <a class="nav-link {% if active_tab == 'add-user' %}active{% endif %}" href="{{ url_for('routes.add_user') }}">Admin - Add User</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link {% if active_tab == 'remove-user' %}active{% endif %}" href="{{ url_for('routes.remove_user') }}">Admin - Remove User</a>
-            <li>
+            </li>
             <li class="nav-item">
                 <a class="nav-link {% if active_tab == 'database' %}active{% endif %}" href="{{ url_for('routes.view_database') }}">Admin - View Database</a>
-            <li>
+            </li>
         {% endif %}
 
         <li class="nav-item">
@@ -81,10 +93,10 @@
 </ul>
 
 
-<main class="p-2">
-    {% block content %}
-    {% endblock content %}
-</main>
+<div class="content">
+{% block content %}
+{% endblock content %}
+</div>
 
 <footer>
     <p>&copy; 2024 Volunteer Reward System</p>
