--- a/templates/rewards.html
+++ b/templates/rewards.html
@@ -1,10 +1,5 @@
-{% extends 'base.html' %}
-
-{% block title %}My Rewards{% endblock %}
-
-{% block content %}
-    <h2>My Rewards</h2>
-
+<div class="reward-section">
+    <h3>Your Rewards</h3>
     <ul class="list-group">
         {% for reward in rewards %}
             <li class="list-group-item">
@@ -14,4 +9,5 @@
             <p>No rewards yet. Keep volunteering!</p>
         {% endfor %}
     </ul>
-{% endblock %}
+
+
