--- a/templates/rewards.html
+++ b/templates/rewards.html
@@ -18,3 +18,13 @@
                 role="progressbar"
                 style="width: {{ progress }}%;"
                 aria-valuenow="{{ progress }}"
+                aria-valuemin="0"
+                aria-valuemax="100">
+                {{ progress|round(1) }}%
+            </div>
+        </div>
+        <p>You are <strong>{{ next_threshold - current_user.hours_volunteered }}</strong> hours away from achieving the next reward!</p>
+    {% else %}
+        <p class="text-success">Congratulations! You've unlocked all rewards. Keep up the amazing work!</p>
+    {% endif %}
+</div>
