edited footer on base

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Volunteer Reward System</p>
+    <p>&copy;VolunteerConnect
 </footer>
 
 <!-- Include Bootstrap JS -->
